# SDS-CP029-social-sphere

./: .gitignore  EDA.ipynb  README.md  requirements.txt
.devcontainer/: devcontainer.json
mlruns/0/: meta.yaml
mlruns/482502677073927466/: meta.yaml
mlruns/482502677073927466/41a8132951734c128d368954aa21bd63/: meta.yaml
mlruns/482502677073927466/41a8132951734c128d368954aa21bd63/tags/: mlflow.runName
mlruns/482502677073927466/52eef9b75ab94c6d9bcc1652ea6d03f1/: meta.yaml
mlruns/482502677073927466/52eef9b75ab94c6d9bcc1652ea6d03f1/metrics/: accuracy  f1  roc_auc
mlruns/482502677073927466/52eef9b75ab94c6d9bcc1652ea6d03f1/tags/: mlflow.log-model.history  mlflow.parentRunId
mlruns/482502677073927466/5ee7d42e8cf54c0f947118df20ad3dba/: meta.yaml
mlruns/482502677073927466/5ee7d42e8cf54c0f947118df20ad3dba/metrics/: roc_auc
mlruns/482502677073927466/5ee7d42e8cf54c0f947118df20ad3dba/tags/: mlflow.log-model.history
mlruns/482502677073927466/715b17c88f5742aca1eafc96544362d7/: meta.yaml
mlruns/482502677073927466/715b17c88f5742aca1eafc96544362d7/metrics/: roc_auc
mlruns/482502677073927466/715b17c88f5742aca1eafc96544362d7/tags/: mlflow.log-model.history
submissions/team-members/Patrick-Edosma/Notebooks/: Social Sphere.ipynb
submissions/team-members/Patrick-Edosoma/: README.md  app.py  requirements.txt
submissions/team-members/Patrick-Edosoma/Notebooks/: Classification_feature_engineering.ipynb  Clustering.ipynb  Social_Sphere_EDA.ipynb  feature_importance.ipynb  regression_feature_engineering.ipynb
submissions/team-members/Patrick-Edosoma/model/: random_regressor_model.pkl  xgboost_classifier_mod.pkl
submissions/team-members/Patrick-Edosoma/preprocessor/: pca.joblib  random_forest_scaler.pkl  scaler.joblib
submissions/team-members/Patrick-Edosoma/src/: classification_trainer.py  regression_trainer.py
submissions/team-members/aditi-phadnis/: Clean_Student_Social_Media_EDA.ipynb  eda.ipynb  eda.py  social_media_app.py
submissions/team-members/blake-lawall/: README.md  README_gradio.md  Untitled.ipynb  app.py  data_analysis.ipynb  graphs.py  info.py  pyproject.toml  requirements.txt
submissions/team-members/blake-lawall/models/: addicted_score_feature_names.joblib  addicted_score_model.joblib  addicted_score_scaler.joblib  cluster_labels.joblib  clustering_feature_names.joblib  clustering_model.joblib  clustering_scaler.joblib  conflicts_classifier_rf.joblib  conflicts_feature_names.joblib  conflicts_scaler.joblib
submissions/team-members/blake-lawall/notebooks/: 01_data_analysis.ipynb  02_conflicts_prediction_mlflow.ipynb  03_regression_addicted_score.ipynb  04_clustering_analysis.ipynb  README.md
submissions/team-members/blake-lawall/outputs/clustering/: projections.csv
submissions/team-members/blake-lawall/outputs/feature_analysis/: encoded_features.csv
submissions/team-members/blake-lawall/outputs/target_analysis/: outlier_statistics.csv
submissions/team-members/blake-lawall/src/: clustering_analysis.py  data_preprocessing.py  data_visualization.py  feature_encoding.py  target_analysis.py
submissions/team-members/blake-lawall/src/ml_experiments/: config.py  cross_validation.py  experiment_tracking.py  hyperparameter_optimization.py  model_ensembling.py  model_interpretation.py  report_generation.py  run_experiments.py
submissions/team-members/blake-lawall/src/ml_experiments/templates/: report_template.html
submissions/team-members/blake-lawall/src/social_sphere_llm/: api_service.py  prediction_service.py  unified_api_service.py  unified_prediction_service.py
submissions/team-members/bob-hosseini/: .gitignore  README.md  requirements.txt
submissions/team-members/galyna-boiko/: 1. EDA.ipynb  2. Classification-Preprocessing-and-Modelling.ipynb  3. Regression-Preprocessing-and-Modelling.ipynb  Classification-Preprocessing-and-Modelling.ipynb  EDA.ipynb  utils.py
submissions/team-members/kola-taiwo/: README.md  app.py  data-analysis.py  data_preprocess.py  requirements.txt  utils.py
(+980 files in other folders)
